# sim-auto

./: .gitignore  BROCHURE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/sim-auto/: BROCHURE.md  Cargo.toml  README.md
crates/sim-auto/src/: command.rs  entrypoint.rs  lib.rs  main.rs  tests.rs
crates/sim-codec-uds/: BROCHURE.md  Cargo.toml  README.md
crates/sim-codec-uds/recipes/: book.toml
crates/sim-codec-uds/recipes/01-basics/: chapter.toml
crates/sim-codec-uds/src/: codec.rs  expr.rs  frame.rs  lib.rs  status.rs  tests.rs
crates/sim-lib-auto-core/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-auto-core/src/: capability.rs  flash.rs  lib.rs  manifest.rs  read_construct.rs  runtime.rs  select.rs  session.rs
crates/sim-lib-auto-core/src/manifest/: fields.rs
crates/sim-lib-auto-core/tests/: audit_patterns.rs  citizen_roundtrip.rs
crates/sim-lib-auto-core/tests/fixtures/: synthetic_auto_values.txt
crates/sim-lib-auto-diag/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-auto-diag/recipes/: book.toml
crates/sim-lib-auto-diag/recipes/01-basics/: chapter.toml
crates/sim-lib-auto-diag/src/: fabric.rs  lib.rs  model.rs  request.rs  runtime.rs  tests.rs
crates/sim-lib-auto-info/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-auto-info/src/: document.rs  fabric.rs  fixtures.rs  lib.rs  model.rs  rank.rs  request.rs  runtime.rs  tests.rs
crates/sim-lib-auto-order/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-auto-order/src/: conformance.rs  invoice.rs  lib.rs  model.rs  runtime.rs  tests.rs
crates/sim-lib-auto-order/src/model/: fields.rs
crates/sim-lib-auto-order/tests/: conformance.rs
crates/sim-lib-auto-parts/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-auto-parts/src/: catalog.rs  fabric.rs  lib.rs  model.rs  order.rs  request.rs  runtime.rs  tests.rs
crates/sim-lib-auto-vehicle/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-auto-vehicle/src/: bridge.rs  contract.rs  fabric.rs  lib.rs  model.rs  request.rs  runtime.rs  tests.rs
crates/sim-lib-auto-vehicle/tests/fixtures/: synthetic_vehicle_identity.txt
crates/sim-lib-auto-vendor/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-auto-vendor/src/: bridge.rs  effect.rs  engine.rs  flash_tests.rs  gate.rs  lib.rs  request.rs  runtime.rs  sites.rs  supplier_tests.rs  test_support.rs  tests.rs
crates/sim-lib-view-bay/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-view-bay/src/: intent.rs  lib.rs  model.rs  scene.rs  tests.rs
docs/agents/: card-index.json  cards.jsonl
docs/diagrams/src/: README.md
docs/humans/: README.md
recipes/: book.toml
recipes/00-overview/modeled-work-order/: Cargo.toml  README.md  recipe.toml
recipes/00-overview/modeled-work-order/src/: main.rs
recipes/01-lanes/flash-lane/: Cargo.toml  README.md  recipe.toml
recipes/01-lanes/flash-lane/src/: main.rs
recipes/01-lanes/info-lane/: Cargo.toml  README.md  recipe.toml
recipes/01-lanes/info-lane/src/: main.rs
recipes/01-lanes/order-lane/: Cargo.toml  README.md  recipe.toml
recipes/01-lanes/order-lane/src/: main.rs
recipes/01-lanes/parts-lane/: Cargo.toml  README.md  recipe.toml
recipes/01-lanes/parts-lane/src/: main.rs
recipes/01-lanes/read-lane/: Cargo.toml  README.md  recipe.toml
recipes/01-lanes/read-lane/src/: main.rs
recipes/01-lanes/service-lane/: Cargo.toml  README.md  recipe.toml
recipes/01-lanes/service-lane/src/: main.rs
recipes/02-sites/autotuner-site/: Cargo.toml  README.md  recipe.toml
recipes/02-sites/autotuner-site/src/: main.rs
recipes/02-sites/biluppgifter-se-site/: Cargo.toml  README.md  recipe.toml
recipes/02-sites/biluppgifter-se-site/src/: main.rs
recipes/02-sites/esitronic-site/: Cargo.toml  README.md  recipe.toml
recipes/02-sites/esitronic-site/src/: main.rs
recipes/02-sites/haynespro-site/: Cargo.toml  README.md  recipe.toml
recipes/02-sites/haynespro-site/src/: main.rs
recipes/02-sites/ista-site/: Cargo.toml  README.md  recipe.toml
recipes/02-sites/ista-site/src/: main.rs
recipes/02-sites/mekonomen-pro-site/: Cargo.toml  README.md  recipe.toml
recipes/02-sites/mekonomen-pro-site/src/: main.rs
recipes/02-sites/odis-site/: Cargo.toml  README.md  recipe.toml
recipes/02-sites/odis-site/src/: main.rs
recipes/02-sites/vida-site/: Cargo.toml  README.md  recipe.toml
recipes/02-sites/vida-site/src/: main.rs
recipes/02-sites/xentry-site/: Cargo.toml  README.md  recipe.toml
recipes/02-sites/xentry-site/src/: main.rs
recipes/auto-core-citizens/: Cargo.toml  README.md  recipe.toml
recipes/auto-core-citizens/src/: main.rs
recipes/auto-recipe-support/: Cargo.toml  README.md
recipes/auto-recipe-support/src/: lib.rs
scripts/: check-recipes.sh
xtask/: Cargo.toml  README.md
xtask/src/: file_sizes.rs
