[workspace]
resolver = "3"
members = [
  "crates/sim-codec-uds",
  "crates/sim-auto",
  "crates/sim-lib-auto-core",
  "crates/sim-lib-auto-diag",
  "crates/sim-lib-auto-info",
  "crates/sim-lib-auto-parts",
  "crates/sim-lib-auto-vehicle",
  "crates/sim-lib-auto-vendor",
  "crates/sim-lib-view-bay",
  "recipes/auto-core-citizens",
  "xtask",
]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sim-nest/sim-auto"
homepage = "https://github.com/sim-nest/sim-auto"

[workspace.lints.rust]
unsafe_code = "forbid"
