[workspace]
resolver = "3"
members = [
  "crates/sim-codec-uds",
  "crates/sim-auto",
  "crates/sim-lib-auto-core",
  "crates/sim-lib-auto-diag",
  "crates/sim-lib-auto-info",
  "crates/sim-lib-auto-order",
  "crates/sim-lib-auto-parts",
  "crates/sim-lib-auto-vehicle",
  "crates/sim-lib-auto-vendor",
  "crates/sim-lib-view-bay",
  "recipes/auto-core-citizens",
  "recipes/auto-recipe-support",
  "recipes/00-overview/modeled-work-order",
  "recipes/01-lanes/read-lane",
  "recipes/01-lanes/info-lane",
  "recipes/01-lanes/parts-lane",
  "recipes/01-lanes/service-lane",
  "recipes/01-lanes/order-lane",
  "recipes/01-lanes/flash-lane",
  "recipes/02-sites/xentry-site",
  "recipes/02-sites/ista-site",
  "recipes/02-sites/vida-site",
  "recipes/02-sites/odis-site",
  "recipes/02-sites/esitronic-site",
  "recipes/02-sites/haynespro-site",
  "recipes/02-sites/biluppgifter-se-site",
  "recipes/02-sites/mekonomen-pro-site",
  "recipes/02-sites/autotuner-site",
  "xtask",
]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sim-nest/sim-auto"
homepage = "https://github.com/sim-nest/sim-auto"

[workspace.lints.rust]
unsafe_code = "forbid"
