[package]
name = "sim-codec-uds"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "UDS and OBD-II byte-frame codec for SIM automotive diagnostics."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-auto"
homepage = "https://github.com/sim-nest/sim-auto"

[dependencies]
sim-codec = { version = "0.1.4" }
sim-cookbook = { version = "0.1.3" }
sim-kernel = { version = "0.1.4" }
sim-lib-auto-core = { version = "0.1.0", path = "../sim-lib-auto-core" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[lints]
workspace = true
