[package]
name = "sim-lib-auto-core"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Automotive domain citizens and capability manifests for SIM."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-auto"
homepage = "https://github.com/sim-nest/sim-auto"

[dependencies]
sim-citizen = { version = "0.1.0" }
sim-citizen-derive = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }

[dev-dependencies]
regex = "1.11.1"
sim-kernel = { version = "0.1.0", features = ["test-support"] }

[lints]
workspace = true
