[package]
name = "sim-lib-auto-diag"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Modeled automotive diagnostic fabric for SIM."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-auto"
homepage = "https://github.com/sim-nest/sim-auto"

[dependencies]
sim-codec-uds = { version = "0.1.0", path = "../sim-codec-uds" }
sim-citizen = { version = "0.1.0" }
sim-citizen-derive = { version = "0.1.0" }
sim-cookbook = { version = "0.1.3" }
sim-kernel = { version = "0.1.4" }
sim-lib-auto-core = { version = "0.1.0", path = "../sim-lib-auto-core" }
sim-lib-stream-fabric = { version = "0.1.4" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[dev-dependencies]
sim-kernel = { version = "0.1.4", features = ["test-support"] }

[lints]
workspace = true
