[package]
name = "sim-lib-auto-vehicle"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Modeled vehicle identity lookup and automotive data-source bridge contracts for SIM."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-auto"
homepage = "https://github.com/sim-nest/sim-auto"

[dependencies]
sim-kernel = { version = "0.1.4" }
sim-lib-auto-core = { version = "0.1.0", path = "../sim-lib-auto-core" }

[dev-dependencies]
sim-kernel = { version = "0.1.4", features = ["test-support"] }

[lints]
workspace = true
