[package]
name = "sim-lib-auto-vendor"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Manifest-driven automotive vendor site engine for SIM."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-auto"
homepage = "https://github.com/sim-nest/sim-auto"

[dependencies]
sim-kernel = { version = "0.1.4" }
sim-lib-auto-core = { version = "0.1.0", path = "../sim-lib-auto-core" }
sim-lib-stream-fabric = { version = "0.1.4" }
sim-citizen = { version = "0.1.0" }
sim-citizen-derive = { version = "0.1.0" }

[dev-dependencies]
sim-kernel = { version = "0.1.4", features = ["test-support"] }

[lints]
workspace = true
